changes from chustomStyle.css and index.html. Added new file scripts.js

--- a/src/customStyle.css
+++ b/src/customStyle.css
@@ -10,6 +10,19 @@ nav .nav-wrapper {
     vertical-align: middle !important;
   }
   
+/*
+  nav .nav-wrapper {
+    height: 64px !important;
+    min-height: 64px !important;
+    line-height: 64px !important;
+  }
+  
+  nav .brand-logo img {
+    max-height: 55px !important; 
+    height: auto !important; 
+    vertical-align: middle !important;
+  }
+  
 
   nav .nav-wrapper ul li a {
     line-height: 64px !important; 
@@ -23,3 +36,4 @@ nav .nav-wrapper {
   .sidenav {
     margin-top: 64px !important;
   }
+    */
